--- a/LambdaExpressions/pom.xml
+++ b/LambdaExpressions/pom.xml
@@ -8,6 +8,16 @@
 	<description>	
 
 									</description>
+	<dependencies>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.2</version>
+			<scope>provided</scope>
+		</dependency>
+
+
+	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
