--- a/Rest-Api/src/main/webapp/WEB-INF/web.xml
+++ b/Rest-Api/src/main/webapp/WEB-INF/web.xml
@@ -21,7 +21,7 @@
 	</servlet-mapping>
 
 
-	<security-constraint>
+	<!-- <security-constraint>
 		<web-resource-collection>
 			<web-resource-name>Wildcard * means all the resources in the application require authentication
 			</web-resource-name>
@@ -32,10 +32,10 @@
 			<http-method>DELETE</http-method>
 		</web-resource-collection>
 		<auth-constraint>
-			<role-name>ADMIN</role-name>
+			<role-name>admin</role-name>
 		</auth-constraint>
 	</security-constraint>
-
+ -->
 	<login-config>
 		<auth-method>BASIC</auth-method>
 	</login-config>
