--- a/SpringBootSwagger/pom.xml
+++ b/SpringBootSwagger/pom.xml
@@ -10,7 +10,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.0.0.RELEASE</version>
-		<relativePath /> <!-- lookup parent from repository -->
+	 <!-- lookup parent from repository -->
 	</parent>
 	<!-- <properties> <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> 
 		<java.version>1.8</java.version> </properties> -->
@@ -81,8 +81,7 @@
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger2</artifactId>
-			<version>2.6.1</version>
-			<scope>compile</scope>
+			<version>2.9.2</version>
 		</dependency>
 		
 		<dependency>
@@ -93,11 +92,10 @@
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger-ui</artifactId>
-			<version>2.6.1</version>
-			<scope>compile</scope>
+			<version>2.9.2</version>
 		</dependency>
 
-<dependency>
+		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 		</dependency>
