Kafka Producer Consumer

--- a/spring-boot-kakfa-producer/src/main/resources/application.properties
+++ b/spring-boot-kakfa-producer/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 kafka.bootstrapAddress=localhost:9092
-message.topic.name.string=kafka-topic2
-message.topic.name.json=kafka-Json
+message.topic.name.string=Kafka_Example
+message.topic.name.json=Kafka_Example_json
 message.topic.replicationFator=1
