--- a/spring-boot-kafka-consumer/pom.xml
+++ b/spring-boot-kafka-consumer/pom.xml
@@ -17,6 +17,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.kafka</groupId>
+			<artifactId>spring-boot-kakfa-producer</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
@@ -38,6 +43,13 @@
 			<artifactId>spring-kafka-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.5</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
