--- a/spring-boot-kafka-consumer/pom.xml
+++ b/spring-boot-kafka-consumer/pom.xml
@@ -16,11 +16,11 @@
 	<description>Demo project for Spring Boot</description>
 
 	<dependencies>
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.kafka</groupId>
 			<artifactId>spring-boot-kakfa-producer</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -32,6 +32,7 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
+			<version>2.9.7</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
