--- a/HashCodeOrEquals/.project
+++ b/HashCodeOrEquals/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>HashCodeOrEquals</name>
+	<name>HashMapConcepts</name>
 	<comment></comment>
 	<projects>
 	</projects>
